[package]
name = "dummy-libra-service"
version = "0.1.0"
authors = ["A. Yasuda"]
build = "build.rs"
edition = "2018"

[build-dependencies]
reqwest = { version = "0.10"}
tokio = { version = "0.2", features = ["full"] }
error-chain = "0.12.2"

[dependencies]
libc = "*"
futures = "0.3"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]